--- a/Mini_projet/templates/base.html
+++ b/Mini_projet/templates/base.html
@@ -7,7 +7,10 @@
     <title>Document</title>
     {% tailwind_css %}
 </head>
-<body class="bg-gradient-to-br from-blue-50 via-slate-100 to-gray-200 min-h-screen flex items-center justify-center"></body>>
+<body class="bg-gradient-to-br from-blue-50 via-slate-100 to-gray-200 min-h-screen flex items-center justify-center">
+
+
+    
 
 {% block content %}
         <!-- Contenu par défaut -->
