--- a/Mini_projet/blog/templates/blog/affiche.html
+++ b/Mini_projet/blog/templates/blog/affiche.html
@@ -31,7 +31,7 @@
 
             {% else %}
                
-                <a href="{% url 'login' %}"
+                <a href=""
                    class="px-5 py-2 rounded-full
                           border border-indigo-600 text-indigo-600
                           font-semibold
