fix:added the  new template

--- a/Mini_projet/templates/base.html
+++ b/Mini_projet/templates/base.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Blog</title>
     {% tailwind_css %}
 </head>
-<body class="bg-gradient-to-br from-blue-50 via-slate-100 to-gray-200 min-h-screen flex items-center justify-center"></body>>
+<body class="bg-gray-50 font-sans leading-normal tracking-normal">
 
-{% block content %}
-        <!-- Contenu par défaut -->
-{% endblock %}
+    {% block content %}
+    {% endblock %}
+
 </body>
 </html>
